--- a/AcunmedyaAkademiProject3/Views/Shared/Components/_DefaultHeaderComponentPartial/Default.cshtml
+++ b/AcunmedyaAkademiProject3/Views/Shared/Components/_DefaultHeaderComponentPartial/Default.cshtml
@@ -20,7 +20,7 @@
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="cta-btn" href="index.html#about">Projelerimiz</a>
+        <a class="cta-btn" href="#portfolio">Projelerimiz</a>
 
     </div>
 </header>
