--- a/AcunmedyaAkademiProject3/Views/Shared/Components/_DefaultHeadComponentPartial/Default.cshtml
+++ b/AcunmedyaAkademiProject3/Views/Shared/Components/_DefaultHeadComponentPartial/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Index - Dewi Bootstrap Template</title>
+    <title>Acunmedya Akademi</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
